New changes added

--- a/carint-html/about.html
+++ b/carint-html/about.html
@@ -43,16 +43,16 @@
       <div class="header_top">
         <div class="container-fluid ">
           <div class="contact_nav">
-            <a href="">
+            <a href="https://wa.me/3535631223">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Telefono : +351xxxxxx
+                Telefono : +54 3535 63-1223
               </span>
             </a>
             <a href="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                Mail : megastar@gmail.com
+                Mail : megastarproductoselectricos@gmail.com
               </span>
             </a>
             
@@ -112,7 +112,7 @@
             <p>
               Con cinco años en el mercado, somos una empresa argentina dedicada a ofrecer insumos eléctricos de alta calidad para proyectos residenciales, comerciales e industriales. Contamos con un amplio depósito y un equipo comprometido, asegurando la disponibilidad de productos confiables. Nuestra reputación se basa en la confianza, la calidad y el compromiso con nuestros clientes.
             </p>
-            <a href="">
+            <a href="https://wa.me/3535631223">
               Contactanos por Whatsapp
             </a>
           </div>
@@ -141,16 +141,16 @@
             </h4>
             <div class="contact_link_box">
               
-              <a href="">
+              <a href="https://wa.me/3535631223">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Whatsapp +3511 xxxxxx
+                  Whatsapp +54 3535 63-1223
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  megastar@gmail.com
+                  megastarproductoselectricos@gmail.com
                 </span>
               </a>
             </div>
